--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,13 @@
   "author": "rahulr",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^6.0.0",
     "nodemon": "^1.18.3"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "chalk": "^2.4.1",
+    "express": "^4.16.3",
+    "mongoose": "^5.2.6"
   }
 }
