--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm start --prefix server",
-    "dev": "npm run dev --prefix server"
+    "dev": "concurrently \"npm run dev --prefix server\" \"npm start --prefix client\""
   },
   "repository": {
     "type": "git",
@@ -16,6 +16,7 @@
   "homepage": "https://bitbucket.org/rr235/chat-app#readme",
   "devDependencies": {
     "babel-eslint": "^8.2.6",
+    "concurrently": "^3.6.1",
     "eslint": "^5.2.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.2",
