--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "express": "^4.16.3",
-    "mongoose": "^5.2.6"
+    "mongoose": "^5.2.6",
+    "socket.io": "^2.1.1"
   }
 }
