--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "npm start --prefix server",
-    "dev": "concurrently \"npm run dev --prefix server\" \"npm start --prefix client\""
+    "dev": "concurrently \"npm run dev --prefix server\" \"npm start --prefix client\"",
+    "build": "npm run build --prefix client",
+    "postbuild": "mv client/build server/build"
   },
   "repository": {
     "type": "git",
