--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,22 +4,32 @@ services:
     container_name: db
     image: mongo
     volumes:
-      - './data/db:/data/db'
-    ports:
-      - "27017:27017"
+      - "./data/db:/data/db"
+    network_mode: service:server
   server:
     container_name: server
     restart: always
     build: ./server
     volumes:
-      - './server:/usr/src/app'
-      - '/usr/src/app/node_modules'
+      - "./server:/usr/src/app"
+      - "/usr/src/app/node_modules"
     environment:
       - PORT=5000
-      - MONGO_DB_URL=mongodb://db:27017/database
+      - MONGO_DB_URL=mongodb://localhost:27017/database
+      - NODE_ENV=development
     ports:
-      - "80:5000"
-    links:
-      - db
-    depends_on:
-      - db
+      - "5000:5000"
+      - "3000:3000"
+      - "27017:27017"
+  client:
+    container_name: client
+    restart: always
+    build: ./client
+    volumes:
+      - "./client:/usr/src/app"
+      - "/usr/src/app/node_modules"
+      - "./server/build:/usr/src/app/build"
+    environment:
+      - PORT=3000
+      - NODE_ENV=development
+    network_mode: service:server
